--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,181 @@
-/*
-    vamos manter esse estilo apenas para a imagem de avatar criando uma nova classe
-*/
-img.avatar {
-    width: 100px;
-    border-radius: 50px;
-    float: left;
-    margin-right: 15px;
+:root {
+    --bg-color: black;
+    --hover-bg-color: rgba(255, 255, 255, 0.03);
+    --primary-font-color: rgb(217, 217, 217);
+    --secondary-font-color: rgb(110, 118, 125);
+    --reply-active-color: rgb(29, 155, 240);
+    --retweet-active-color: rgb(0, 186, 124);
+    --favorite-active-color: rgb(249, 24, 128);
 }
 
-span.username {
+body {
+    background-color: var(--bg-color);
+    font-family: Helvetica, sans-serif;
+    color: var(--primary-font-color);
+    font-size: 15px;
+    line-height: 20px;
+}
+
+.tweet-article {
+    display: flex;
+    padding: 12px 16px;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.tweet-article > div.tweet-avatar {
+    flex-basis: 48px;
+    margin-right: 12px;
+}
+
+.tweet-article > div.tweet-avatar > img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.tweet-article > div.tweet {
+    width: 100%;
+}
+
+.tweet-article > div.tweet > div.tweet-header {
+    display: flex;
+    margin-bottom: 2px;
+}
+
+.tweet-article > div.tweet > div.tweet-header a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.tweet-article > div.tweet > div.tweet-header > .twitter-user > .twitter-name {
+    font-weight: bold;
+    color: inherit;
+}
+
+.tweet-article
+    > div.tweet
+    > div.tweet-header
+    > .twitter-user
+    > .twitter-handle {
+    color: var(--secondary-font-color);
+}
+
+.tweet-article > div.tweet > div.tweet-header > .tweet-header-divider {
+    display: inline;
+    color: var(--secondary-font-color);
+    padding-left: 4px;
+    padding-right: 4px;
     font-weight: bold;
 }
 
-/*
-    Esta imagem vai ficar muito grande então vamos diminuir seu tamanho
-    Em nosso site queremos que todas as imagens tenham mais ou menos o mesmo tamanho para que o layout se mantenha consistente
-    Então vamos também limitar a altura dessa imagem
-    Eita, a imagem ficou beem achatada, para evitar isso vamos usar 'object-fit' com valor cover para distribuir melhor a imagem nesse tamanho reduzido
-    
-    No DevTools, explorar diferentes opções desse atributo
-*/
-img.tweet-img {
-    width: 400px;
-    height: 200px;
-    object-fit: cover;
+.tweet-article > div.tweet > div.tweet-header > .tweet-timestamp {
+    color: var(--secondary-font-color);
+}
+
+.tweet-article > div.tweet > div.tweet-content p {
+    margin: 0;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions {
+    display: flex;
+    justify-content: space-between;
+    max-width: 425px;
+    margin-top: 12px;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action {
+    display: flex;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    color: var(--secondary-font-color);
+    font-size: 15px;
+    line-height: 20px;
+    cursor: pointer;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action span {
+    padding-left: 12px;
+    padding-right: 12px;
+    transition: color 0.2s ease-in-out;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action span {
+    padding-left: 12px;
+    padding-right: 12px;
+    transition: color 0.2s ease-in-out;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action > .action-icon {
+    position: relative;
+    line-height: 0;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action > .action-icon > svg {
+    width: 1.25em;
+    height: 1.25em;
+    fill: var(--secondary-font-color);
+    transition: fill 0.2s ease-in-out;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action > .action-icon > .action-icon-backdrop {
+    position: absolute;
+    background-color: var(--secondary-font-color);
+    opacity: 0;
+    margin: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    border-radius: 50%;
+    transition: margin, background-color, opacity 0.2s ease-in-out;
+}
+
+
+.tweet-article:hover {
+    background-color: var(--hover-bg-color);
+    cursor: pointer;
+}
+
+.tweet-article > div.tweet-avatar > img:hover {
+    opacity: 0.8;
+}
+
+.tweet-article > div.tweet > div.tweet-header > .twitter-user:hover > .twitter-name, 
+.tweet-article > div.tweet > div.tweet-header > .tweet-timestamp:hover {
+    text-decoration: underline;
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.reply:hover span {
+    color: var(--reply-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.reply:hover svg {
+    fill: var(--reply-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.reply:hover .action-icon-backdrop {
+    background-color: var(--reply-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.retweet:hover span {
+    color: var(--retweet-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.retweet:hover svg {
+    fill: var(--retweet-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.retweet:hover .action-icon-backdrop {
+    background-color: var(--retweet-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.favorite:hover span {
+    color: var(--favorite-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.favorite:hover svg {
+    fill: var(--favorite-active-color);
+}
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action.favorite:hover .action-icon-backdrop {
+    background-color: var(--favorite-active-color);
+}
+
+.tweet-article > div.tweet > div.tweet-content > .tweet-actions .tweet-action:hover > .action-icon > .action-icon-backdrop {
+    opacity: 0.1;
+    margin: -8px;
 }
