--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ body {
     display: flex;
     padding: 12px 16px;
     transition: background-color 0.2s ease-in-out;
+    max-width: 598px;
+    box-sizing: border-box;
 }
 
 .tweet-article > div.tweet-avatar {
